--- a/index.html
+++ b/index.html
@@ -3,4 +3,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
   </head>
+  <body>
+    <p>Welcome to Project Hourglass! This site is currently under construction.</p>
+  </body>
 </html>
