--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <html>
-  <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width">
-  </head>
-  <body>
-    <p>Welcome to Project Hourglass! This site is currently under construction.</p>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>Hourglass</title>
+  <link rel="icon" href="hourglass.png">
+</head>
+
+
+<body>
+  <script src="script.js"></script>
+  <h1>⌛ Hourglass</h1>
+  <div id="images">
+    <p><a onclick="gameIframe()"><img src="Drive Mad/logo.jpg" alt="Cool Picture"></a></p>
+    <p><a onclick="gameIframe()"><img src="Drive Mad/logo.jpg" alt="Cool Picture"></a></p>
+    <p><a onclick="gameIframe()"><img src="Drive Mad/logo.jpg" alt="Cool Picture"></a></p>
+    <p><a onclick="gameIframe()"><img src="Drive Mad/logo.jpg" alt="Cool Picture"></a></p>
+    <p><a onclick="gameIframe()"><img src="Drive Mad/logo.jpg" alt="Cool Picture"></a></p>
+    <p><a onclick="gameIframe()"><img src="Drive Mad/logo.jpg" alt="Cool Picture"></a></p>
+  </div>
+  <div id="gamePage">
+    <p>This is only an example game. Soon, your games will be added here.</p>
+    <h1>Drive Mad</h1>
+    <iframe id="gameIframe" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  </div>
+</body>
 </html>
