--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <title>Hourglass</title>
+  <title> Project Hourglass</title>
   <link rel="icon" href="hourglass.ico">
 </head>
 
 
 <body>
   <script src="script.js"></script>
-  <h1>⌛ Hourglass</h1>
+  <h1>⌛ Project Hourglass</h1>
   <div id="images">
     <p><a onclick="gameIframe()"><img src="Drive Mad/logo.jpg" alt="Cool Picture"></a></p>
     <p><a onclick="gameIframe()"><img src="Drive Mad/logo.jpg" alt="Cool Picture"></a></p>
