--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <title> Project Hourglass</title>
+  <title>Hourglass</title>
   <link rel="icon" href="hourglass.ico">
 </head>
 
